--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<meta name="format-detection" content="telephone=no,email=no,adress=no">
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-touch-fullscreen" content="yes">
+	<meta name="full-screen" content="yes">
+	<meta name="browsermode" content="application">
 	<title>La-Chance</title>
 	<!-- <link rel="stylesheet" href="style/reset.css"> -->
 	<link rel="stylesheet" href="style/index.css">
