--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<meta name="apple-touch-fullscreen" content="yes">
 	<meta name="full-screen" content="yes">
 	<meta name="browsermode" content="application">
+	<meta name="x5-fullscreen" content="true">
 	<title>La-Chance</title>
 	<!-- <link rel="stylesheet" href="style/reset.css"> -->
 	<link rel="stylesheet" href="style/index.css">
