--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
 	<script>
 		$(function(){
 			$('#fullpage').fullpage();
+			addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); 
+			function hideURLbar(){ 
+				window.scrollTo(0,1); 
+			} 
 		});
 	</script>
 </body>
