--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 </head>
 <body>
 	<div id="fullpage">
-		<div class="section section1" ><span>第一</span></div>
-		<div class="section section2" ></div>
+		<div class="section section1" >第一</div>
+		<div class="section section2" >第二</div>
 	</div>
 	<script src="scripts/jquery-1.12.0.min.js"></script>
 	<script src="scripts/jquery.fullPage.min.js"></script>
