--- a/index.html
+++ b/index.html
@@ -33,14 +33,30 @@
 		<section id="section1">
 			<header><a href="index.html"><img src="images/header.png" alt="header"></a></header>
 			<div class="main">
-				<p>创意 · 设计 · 开发</p>
+				<!-- <p>创意 · 设计 · 开发</p> -->
 			</div>
-			<footer></footer>
+			<div class="sheji-01 bigbox"><a href=""><span>设计</span><img src="images/sheji.png" alt="设计"></a></div>
+			<div class="cehua-01 bigbox"><a href=""><span>策划运营</span><img src="images/cehua.png" alt="策划"></a></div>
+			<div class="cehua-02 smallbox"><a href=""><span>运营</span></a></div>
+			<div class="cehua-03 smallbox"><a href=""><span>推广</span></a></div>
+			<footer><a href="#">案例 & 合作伙伴<span>></span></a></footer>
 		</section>
 	</div>
 
 	<script src="scripts/zepto.min.js"></script>
 	<script>
+		$(function() {
+			var bigBoxWidth = $('.bigbox').width();
+			var smallBoxWidth = (bigBoxWidth-5)/2;
+			$('.bigbox').height(bigBoxWidth);
+			$('.smallbox').width(smallBoxWidth);
+			$('.smallbox').height(smallBoxWidth);
+			$('.cehua-03').css('left', bigBoxWidth+10);
+			$('.cehua-02').css({
+				'left': bigBoxWidth+10,
+				'bottom': 60+smallBoxWidth+5
+			});
+		});
 	</script>
 </body>
 </html>
