--- a/commit_address.html
+++ b/commit_address.html
@@ -98,6 +98,9 @@
 			margin-left: 4%;
 			-webkit-appearance: none;
 		}
+		input[type=text] {
+			-webkit-appearance: none;
+		}
 	</style>
 </head>
 <body onload="setup();promptinfo();">
