--- a/commit_address.html
+++ b/commit_address.html
@@ -90,7 +90,6 @@
 			display: block;
 		}
 		#button input {
-			/*display: block;*/
 			background-color: #f60;
 			height: 30px;
 			border: 1px solid #f60;
@@ -98,8 +97,16 @@
 			margin-left: 4%;
 			-webkit-appearance: none;
 		}
-		input[type=text] {
+		input[type=text],input[type=tel]{
 			-webkit-appearance: none;
+		}
+		input[type=checkbox] {
+			margin: 0;
+			padding: 0;
+/*			-webkit-appearance: none;
+			width: 12px;
+			height: 12px;
+			background-color: #fff;*/
 		}
 	</style>
 </head>
