--- a/commit_address.html
+++ b/commit_address.html
@@ -103,10 +103,11 @@
 		input[type=checkbox] {
 			margin: 0;
 			padding: 0;
-/*			-webkit-appearance: none;
+/*			-webkit-appearance: none;*/
 			width: 12px;
 			height: 12px;
-			background-color: #fff;*/
+			background-color: #fff;
+			border-radius: 3px;
 		}
 	</style>
 </head>
