--- a/commit_address.html
+++ b/commit_address.html
@@ -106,8 +106,8 @@
 /*			-webkit-appearance: none;*/
 			width: 12px;
 			height: 12px;
-			background-color: #fff;
-			border-radius: 3px;
+/*			background-color: #fff;
+			border-radius: 3px;*/
 		}
 	</style>
 </head>
