--- a/commit_address.html
+++ b/commit_address.html
@@ -40,10 +40,10 @@
 			/*padding: 5px;*/
 			font-size: 12px;
 			outline: none;
-			-webkit-tap-highlight-color: transparent;
+/*			-webkit-tap-highlight-color: transparent;
 			-webkit-appearance: none;
 			－moz-appearance: none;
-			-moz-tap-highlight-color: transparent;
+			-moz-tap-highlight-color: transparent;*/
 			margin: 0;
 			color: #a9a9a9;
 
@@ -103,11 +103,9 @@
 		input[type=checkbox] {
 			margin: 0;
 			padding: 0;
-/*			-webkit-appearance: none;*/
 			width: 12px;
 			height: 12px;
-/*			background-color: #fff;
-			border-radius: 3px;*/
+			margin-right: 2px;
 		}
 	</style>
 </head>
