--- a/commit_address.html
+++ b/commit_address.html
@@ -40,10 +40,10 @@
 			/*padding: 5px;*/
 			font-size: 12px;
 			outline: none;
-/*			-webkit-tap-highlight-color: transparent;
+			-webkit-tap-highlight-color: rgba(255,0,0,0.5);
 			-webkit-appearance: none;
 			－moz-appearance: none;
-			-moz-tap-highlight-color: transparent;*/
+			-moz-tap-highlight-color: rgba(255,0,0,0.5);
 			margin: 0;
 			color: #a9a9a9;
 
