--- a/commit_address.html
+++ b/commit_address.html
@@ -13,6 +13,9 @@
 			padding: 0;
 			margin: 0;
 		}
+		a img {
+			-webkit-touch-callout:none;
+		}
 		form {
 			display: block;
 			padding-top: 20px;
@@ -36,14 +39,12 @@
 			background: #fff url(down.jpg) no-repeat 95% 45%;
 			background-size: 5%;
 			border-radius: 0px;
-			/*width: 128px;*/
-			/*padding: 5px;*/
 			font-size: 12px;
 			outline: none;
-			-webkit-tap-highlight-color: rgba(255,0,0,0.5);
+			-webkit-tap-highlight-color: rgba(0,0,0,0);
 			-webkit-appearance: none;
 			－moz-appearance: none;
-			-moz-tap-highlight-color: rgba(255,0,0,0.5);
+			-moz-tap-highlight-color: rgba(0,0,0,0);
 			margin: 0;
 			color: #a9a9a9;
 
@@ -71,7 +72,6 @@
 			vertical-align: bottom;
 		}
 		#button a {
-/*			display: block;*/
 			color: #f60;
 			text-decoration: none;
 			background-color: #fff;
@@ -97,9 +97,9 @@
 			margin-left: 4%;
 			-webkit-appearance: none;
 		}
-		input[type=text],input[type=tel]{
+/*		input[type=text],input[type=tel]{
 			-webkit-appearance: none;
-		}
+		}*/
 		input[type=checkbox] {
 			margin: 0;
 			padding: 0;
