--- a/commit_address.html
+++ b/commit_address.html
@@ -97,9 +97,9 @@
 			margin-left: 4%;
 			-webkit-appearance: none;
 		}
-/*		input[type=text],input[type=tel]{
+		input[type=text],input[type=tel]{
 			-webkit-appearance: none;
-		}*/
+		}
 		input[type=checkbox] {
 			margin: 0;
 			padding: 0;
