--- a/commit_address.html
+++ b/commit_address.html
@@ -88,6 +88,7 @@
 			box-sizing: border-box;
 			width: 84%;
 			display: block;
+			-webkit-user-select: none;
 		}
 		#button input {
 			background-color: #f60;
