--- a/homepage.html
+++ b/homepage.html
@@ -78,7 +78,8 @@
 	<script src="http://cdn.bootcss.com/zepto/1.1.5/zepto.min.js"></script>
 	<script>
 		var myScroll = new IScroll('.categoryContent', {
-			mouseWheel: true
+			mouseWheel: true,
+			momentum: true
 			// scrollbars: true
 		});
 	</script>
