--- a/homepage.html
+++ b/homepage.html
@@ -74,13 +74,12 @@
 			</div>
 		</div>
 	</div>
-	<script src="http://cdn.bootcss.com/iScroll/5.1.3/iscroll.min.js"></script>
-	<script src="http://cdn.bootcss.com/zepto/1.1.5/zepto.min.js"></script>
+	<script src="iscroll.min.js"></script>
+	<script src="zepto.min.js"></script>
 	<script>
 		var myScroll = new IScroll('.categoryContent', {
 			mouseWheel: true,
 			momentum: true
-			// scrollbars: true
 		});
 	</script>
 </body>
