--- a/homepage.html
+++ b/homepage.html
@@ -79,7 +79,8 @@
 	<script>
 		var myScrollRight = new IScroll('.categoryContent', {
 			mouseWheel: true,
-			momentum: true
+			momentum: true,
+			bounce: true
 		});
 		var myScrollLeft = new IScroll('.rootList', {
 			mouseWheel: true,
