--- a/homepage.html
+++ b/homepage.html
@@ -77,7 +77,8 @@
 	<script src="iscroll.min.js"></script>
 	<script src="zepto.min.js"></script>
 	<script>
-		var myScrollRight = new IScroll('.categoryContent', {
+		$(function() {
+					var myScrollRight = new IScroll('.categoryContent', {
 			mouseWheel: true,
 			momentum: true,
 			bounce: true
@@ -85,6 +86,7 @@
 		var myScrollLeft = new IScroll('.rootList', {
 			mouseWheel: true,
 			momentum: true
+		});
 		});
 	</script>
 </body>
