--- a/homepage.html
+++ b/homepage.html
@@ -30,12 +30,40 @@
 				<li><a href="">手机数码</a></li>
 				<li><a href="">母婴频道</a></li>
 				<li><a href="">图书</a></li>
-				<li><a href="">家具家纺</a></li>				
+				<li><a href="">家具家纺</a></li>
+
+				<li><a href="">品牌男装</a></li>
+				<li><a href="">酒水饮料</a></li>
+				<li><a href="">家用电器</a></li>
+				<li><a href="">电脑办公</a></li>
+				<li><a href="">手机数码</a></li>
+				<li><a href="">母婴频道</a></li>
+				<li><a href="">图书</a></li>
+				<li><a href="">家具家纺</a></li>	
+
 			</ul>
 		</div>
 		<div class="categoryContent">
 			<div class="wrapper">
 				<div class="bannerImg"><a href=""><img src="banner.jpg"></a></div>
+				<section>
+					<h4>热卖品类</h4>
+					<ul>
+						<li><a href=""><img src="item.jpg"><span>毛呢大衣</span></a></li>
+						<li><a href=""><img src="item.jpg"><span>羽绒服</span></a></li>
+						<li><a href=""><img src="item.jpg"><span>针织衫</span></a></li>
+						<li><a href=""><img src="item.jpg"><span>连衣裙</span></a></li>
+						<li><a href=""><img src="item.jpg"><span>棉服</span></a></li>
+						<li><a href=""><img src="item.jpg"><span>长袖T恤</span></a></li>
+						<li><a href=""><img src="item.jpg"><span>羊绒衫</span></a></li>
+						<li><a href=""><img src="item.jpg"><span>衬衫</span></a></li>
+						<li><a href=""><img src="item.jpg"><span>风衣</span></a></li>
+						<li><a href=""><img src="item.jpg"><span>皮衣</span></a></li>
+						<li><a href=""><img src="item.jpg"><span>休闲裤</span></a></li>
+						<li><a href=""><img src="item.jpg"><span>牛仔裤</span></a></li>
+					</ul>
+				</section>
+
 				<section>
 					<h4>热卖品类</h4>
 					<ul>
@@ -78,15 +106,15 @@
 	<script src="zepto.min.js"></script>
 	<script>
 		$(function() {
-					var myScrollRight = new IScroll('.categoryContent', {
-			mouseWheel: true,
-			momentum: true,
-			bounce: true
-		});
-		var myScrollLeft = new IScroll('.rootList', {
-			mouseWheel: true,
-			momentum: true
-		});
+			var myScrollRight = new IScroll('.categoryContent', {
+				mouseWheel: true,
+				momentum: true,
+				bounce: true
+			});
+			var myScrollLeft = new IScroll('.rootList', {
+				mouseWheel: true,
+				momentum: true
+			});
 		});
 	</script>
 </body>
