--- a/test1.html
+++ b/test1.html
@@ -7,10 +7,12 @@
 	<style>
 		#wrapper {
 			position: absolute;
-			height: 500px;
 		}
 		li {
-			height: 30px;
+			height: 50px;
+		}
+		html body #wrapper{
+			height: 100%;
 		}
 	</style>
 </head>
