--- a/test1.html
+++ b/test1.html
@@ -74,12 +74,12 @@
 	<script src="iscroll.min.js"></script>
 	<script src="zepto.min.js"></script>
 	<script>
-		$(function() {
-			var myScrollRight = new IScroll('#wrapper', {
-				mouseWheel: true,
-				momentum:true
-			});
-		});
+		// $(function() {
+		// 	var myScrollRight = new IScroll('#wrapper', {
+		// 		mouseWheel: true,
+		// 		momentum:true
+		// 	});
+		// });
 	</script>
 </body>
 </html>
