--- a/homepage.html
+++ b/homepage.html
@@ -113,8 +113,8 @@
 			});
 			var myScrollLeft = new IScroll('.rootList', {
 				mouseWheel: true,
-				momentum:true,
-				preventDefault:true
+				momentum:true
+				click:true
 			});
 		});
 	</script>
