--- a/homepage.html
+++ b/homepage.html
@@ -108,12 +108,12 @@
 		$(function() {
 			var myScrollRight = new IScroll('.categoryContent', {
 				mouseWheel: true,
-				momentum:true
+				momentum:true,
 				click:true
 			});
 			var myScrollLeft = new IScroll('.rootList', {
 				mouseWheel: true,
-				momentum:true
+				momentum:true,
 				click:true
 			});
 		});
