--- a/homepage.html
+++ b/homepage.html
@@ -116,6 +116,7 @@
 				momentum:true,
 				click:true
 			});
+			document.addEventListener('touchmove', function (e) { e.preventDefault(); }, false);
 		});
 	</script>
 </body>
