--- a/shaidan/shaidan.html
+++ b/shaidan/shaidan.html
@@ -37,7 +37,7 @@
 			background-color: #fff;
 		}
 		#title {
-			width: 100%;
+			/*width: 100%;*/
 			/*display: block;*/
 			padding: 10px;
 			font-size: 14px;
@@ -48,7 +48,7 @@
 		}
 		#comment {
 			border:0;
-			width: 100%;
+			/*width: 100%;*/
 			resize: none;
 			font-size: 14px;
 			padding: 10px;
