--- a/homepage.html
+++ b/homepage.html
@@ -111,7 +111,7 @@
 				mouseWheel: true,
 				momentum:true,
 				click:true,
-				tap:true
+				bounce:true
 			});
 			var myScrollLeft = new IScroll('.rootList', {
 				mouseWheel: true,
