--- a/homepage.html
+++ b/homepage.html
@@ -12,6 +12,7 @@
 	<div class="categoryBody">
 		<div class="rootList">
 			<ul>
+
 				<li><a href="">推荐分类</a></li>
 				<li class="active"><a href="">潮流女装</a></li>
 				<li><a href="">品牌男装</a></li>
@@ -22,7 +23,6 @@
 				<li><a href="">母婴频道</a></li>
 				<li><a href="">图书</a></li>
 				<li><a href="">家具家纺</a></li>
-
 				<li><a href="">品牌男装</a></li>
 				<li><a href="">酒水饮料</a></li>
 				<li><a href="">家用电器</a></li>
@@ -31,7 +31,6 @@
 				<li><a href="">母婴频道</a></li>
 				<li><a href="">图书</a></li>
 				<li><a href="">家具家纺</a></li>
-
 				<li><a href="">品牌男装</a></li>
 				<li><a href="">酒水饮料</a></li>
 				<li><a href="">家用电器</a></li>
@@ -45,24 +44,8 @@
 		</div>
 		<div class="categoryContent">
 			<div class="wrapper">
+
 				<div class="bannerImg"><a href=""><img src="banner.jpg"></a></div>
-				<section>
-					<h4>热卖品类</h4>
-					<ul>
-						<li><a href=""><img src="item.jpg"><span>毛呢大衣</span></a></li>
-						<li><a href=""><img src="item.jpg"><span>羽绒服</span></a></li>
-						<li><a href=""><img src="item.jpg"><span>针织衫</span></a></li>
-						<li><a href=""><img src="item.jpg"><span>连衣裙</span></a></li>
-						<li><a href=""><img src="item.jpg"><span>棉服</span></a></li>
-						<li><a href=""><img src="item.jpg"><span>长袖T恤</span></a></li>
-						<li><a href=""><img src="item.jpg"><span>羊绒衫</span></a></li>
-						<li><a href=""><img src="item.jpg"><span>衬衫</span></a></li>
-						<li><a href=""><img src="item.jpg"><span>风衣</span></a></li>
-						<li><a href=""><img src="item.jpg"><span>皮衣</span></a></li>
-						<li><a href=""><img src="item.jpg"><span>休闲裤</span></a></li>
-						<li><a href=""><img src="item.jpg"><span>牛仔裤</span></a></li>
-					</ul>
-				</section>
 
 				<section>
 					<h4>热卖品类</h4>
@@ -99,37 +82,68 @@
 						<li><a href=""><img src="item.jpg"><span>牛仔裤</span></a></li>
 					</ul>
 				</section>
+
+				<section>
+					<h4>热卖品类</h4>
+					<ul>
+						<li><a href=""><img src="item.jpg"><span>毛呢大衣</span></a></li>
+						<li><a href=""><img src="item.jpg"><span>羽绒服</span></a></li>
+						<li><a href=""><img src="item.jpg"><span>针织衫</span></a></li>
+						<li><a href=""><img src="item.jpg"><span>连衣裙</span></a></li>
+						<li><a href=""><img src="item.jpg"><span>棉服</span></a></li>
+						<li><a href=""><img src="item.jpg"><span>长袖T恤</span></a></li>
+						<li><a href=""><img src="item.jpg"><span>羊绒衫</span></a></li>
+						<li><a href=""><img src="item.jpg"><span>衬衫</span></a></li>
+						<li><a href=""><img src="item.jpg"><span>风衣</span></a></li>
+						<li><a href=""><img src="item.jpg"><span>皮衣</span></a></li>
+						<li><a href=""><img src="item.jpg"><span>休闲裤</span></a></li>
+						<li><a href=""><img src="item.jpg"><span>牛仔裤</span></a></li>
+					</ul>
+				</section>
+
 			</div>
 		</div>
 	</div>
 	<script src="iscroll.min.js"></script>
-	<script src="zepto.min.js"></script>
-	
+	<script src="zepto.min.js"></script>	
 	<script>
+
 		$(function() {
+
+			//初始化页面滚动
 			var myScrollRight = new IScroll('.categoryContent', {
 				mouseWheel: true,
 				momentum:true,
 				click:true,
-				bounce:true
+				bounce:true,
+				bounceLock:true,
+				fixedScrollbar:true,
+				hideScrollbar:true
 			});
 			var myScrollLeft = new IScroll('.rootList', {
 				mouseWheel: true,
 				momentum:true,
 				click:true,
-				bounce:true
+				bounce:true,
+				bounceLock:true,
+				fixedScrollbar:true,
+				hideScrollbar:true
 			});
 			document.addEventListener('touchmove', function (e) { e.preventDefault(); }, false);
-			// $('#element').on('tap', doSomething);
 
+
+			//为左侧栏项目添加点击事件
 			$('.rootList li').click(function() {
 				$(this).addClass('active').siblings().removeClass();
-				// var destinaton = $(this).index()*49*(-1);
-				// startMove($('.rootList>ul')[0],{'top':destinaton});
-				// $('.rootList>ul').css('transform','translate(0px,'+destinaton+'px)');
 				myScrollLeft.scrollToElement(this, 500);
+
+
+				//在此处编写AJAX
+
+
 				return false;
 			});
+
 		});
 	</script>
 </body>
