--- a/dizhiguanli.html
+++ b/dizhiguanli.html
@@ -41,6 +41,9 @@
 		.tel {
 			margin-left: 15px;
 		}
+		.setDefault {
+			display: inline-block;
+		}
 		.setDefault,.editLink{
 			padding-left: 10px;
 			color: #787878;
@@ -59,7 +62,7 @@
 		}
 		.editLink {
 			float: right;
-			margin-top: -17px;
+			/*margin-top: -17px;*/
 		}
 		.edit {
 			border-top: 1px solid #ebebeb;
@@ -98,7 +101,7 @@
 					<p class="address"><span>广东</span><span>广州市</span><span>海珠区</span><span>xxxxxxxxx</span></p>
 				</div>
 				<div class="edit">
-					<div class="setDefault"><input type="radio" name="default" value="0">&nbsp;&nbsp;设为默认</div>
+					<div class="setDefault"><input type="radio" name="default" value="0"><span>&nbsp;&nbsp;设为默认</span></div>
 					<div class="editLink"><a href="">修改</a><a href="">删除</a></div>
 				</div>
 			</li>
