--- a/dizhiguanli.html
+++ b/dizhiguanli.html
@@ -62,7 +62,6 @@
 		}
 		.editLink {
 			float: right;
-			/*margin-top: -17px;*/
 		}
 		.edit {
 			border-top: 1px solid #ebebeb;
@@ -88,6 +87,11 @@
 			font-size: 22px;
 			border-radius: 0;
 			-webkit-appearance: none;
+		}
+		.setDefault>span {
+			position: relative;
+			top: -2px;
+			left: 0;
 		}
 	</style>
 </head>
