--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -104,6 +104,12 @@
 			</div>
 		</div>
 	</div>
+	<div id="footer">
+		<span><a href=""><img src="Icon_01.png"><b>首页</b></a></span>
+		<span><a href=""><img src="Icon_02.png"><b>所有商品</b></a></span>
+		<span><a href=""><img src="Icon_03.png"><b>购物车</b></a></span>
+		<span><a href=""><img src="Icon_04.png"><b>个人中心</b></a></span>
+	</div>
 	<script src="iscroll.min.js"></script>
 	<script src="zepto.min.js"></script>	
 	<script>
