--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -40,6 +40,8 @@
 				<li><a href="">图书</a></li>
 				<li><a href="">家具家纺</a></li>	
 
+				<!-- <div class="bottomFix"></div> -->
+
 			</ul>
 		</div>
 		<div class="categoryContent">
@@ -100,7 +102,8 @@
 						<li><a href=""><img src="item.jpg"><span>牛仔裤</span></a></li>
 					</ul>
 				</section>
-
+				
+				<!-- <div class="bottomFix"></div> -->
 			</div>
 		</div>
 
