--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -40,7 +40,7 @@
 				<li><a href="">图书</a></li>
 				<li><a href="">家具家纺</a></li>	
 
-				<!-- <div class="bottomFix"></div> -->
+				<div class="bottomFix"></div>
 
 			</ul>
 		</div>
@@ -103,7 +103,7 @@
 					</ul>
 				</section>
 				
-				<!-- <div class="bottomFix"></div> -->
+				<div class="bottomFix"></div>
 			</div>
 		</div>
 
