--- a/succ/succ.html
+++ b/succ/succ.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
 	<meta name="format-detection" content="telephone=no">
-	<title>Document</title>
+	<title>恭喜！您中奖了</title>
 	<style>
 		* {
 			margin: 0;
@@ -17,8 +17,12 @@
 			-webkit-background-size: cover;
 			background-size: cover;
 		}
+		input {
+			-webkit-appearance;
+		}
 		html,body{
 			height: 100%;
+			overflow: hidden;
 		}
 		a,img {
 			-webkit-touch-callout:none;
@@ -26,18 +30,92 @@
 		div, span, a, header {
 			-webkit-tap-highlight-color: rgba(255,255,255,0);
 		}
+		.bg-top {
+			height: 140px;
+		}
+		.main {
+			width: 100%;
+		}
+		.main h2 {
+			text-align: center;
+			font-size: 1.4em;
+			color: #fff;
+			background-color: rgba(0,0,0,0.5);
+			height: 50px;
+			line-height: 50px;
+		}
+		h2,h3 {
+			font-weight: normal;
+		}
+		.bg-top {
+			background: url(bg01.png) left bottom no-repeat;
+			-webkit-background-size: 100%;
+			background-size: 100%;
+		}
+		.main form {
+			/*text-align: center;*/
+			margin-top: 20px;
+			background-color: rgba(0,0,0,0.5);
+			padding: 20px 0 0 0;
+		}
+		.main h3 {
+			color: #fdb434;
+			text-align: center;
+			display: block;
+			width: 120px;
+			border: 2px solid #fdb434;
+			margin: 0 auto;
+			border-radius: 8px;
+			height: 22px;
+			line-height: 22px;
+			font-size: 16px;
+			margin-bottom: 15px;
+		}
+		.main label {
+			color: #fff;
+			font-size: 16px;
+			width: 100px;
+			display: inline-block;
+			text-align: center;
+		}
+		.main form>div {
+			padding-bottom: 15px;
+		}
+		input[type="text"],#submit {
+			border: 0;
+			height: 28px;
+			border-radius: 5px;
+			width: 55%;
+			font-size: 16px;
+		}
+		#submit {
+			margin-left: 100px;
+			background-color: #fdb434;
+			margin-bottom: 10px;
+		}
+		.bg-bottom {
+			background: url(bg02.png) left top no-repeat;
+			-webkit-background-size: 100%;
+			background-size: 100%;
+			height: 80px;
+			position: relative;
+			z-index: 2;
+			top: -35px;
+		}
 	</style>
 </head>
 <body>
-	<div>
+	<div class="main">
+		<div class="bg-top"></div>
 		<h2>恭喜你获得iPhone 6！</h2>
 		<form action="" method="post">
 			<h3>领奖信息</h3>
-			<div><label for="name">真实姓名</label><input type="text" id="name" value="name"></div>
-			<div><label for="tel">手机号码</label><input type="text" id="tel" value="tel"></div>
-			<div><label for="address">收货地址</label><input type="text" id="address" value="address"></div>
-			<div><input type="submit" value="提交"></div>
+			<div><label for="name">真实姓名</label><input type="text" id="name"></div>
+			<div><label for="tel">手机号码</label><input type="text" id="tel"></div>
+			<div><label for="address">收货地址</label><input type="text" id="address"></div>
+			<div><input type="submit" value="提  交" id="submit"></div>
 		</form>
+		<div class="bg-bottom"></div>
 	</div>
 </body>
 </html>
