--- a/succ/succ.html
+++ b/succ/succ.html
@@ -18,7 +18,7 @@
 			background-size: cover;
 		}
 		input {
-			-webkit-appearance;
+			-webkit-appearance:none;
 		}
 		html,body{
 			height: 100%;
@@ -31,7 +31,7 @@
 			-webkit-tap-highlight-color: rgba(255,255,255,0);
 		}
 		.bg-top {
-			height: 140px;
+			height: 125px;
 		}
 		.main {
 			width: 100%;
