--- a/manage_address.html
+++ b/manage_address.html
@@ -96,10 +96,10 @@
 			top: -1px;
 			left: 0;
 		}
-		.editLink {
+/*		.editLink {
 			position: relative;
 			top: -4px;
-		}
+		}*/
 		.editLink a {
 			width: 40px;
 			height: 25px;
