--- a/edit_address.html
+++ b/edit_address.html
@@ -160,7 +160,7 @@
 		// 	return false;
 		// });
 
-		alert('test2');
+		alert('test3');
 
 		function promptinfo()
 		{
@@ -612,7 +612,7 @@ setTimeout(function(){
 	var shengfen = '广东省';
 	$('#s1').find(':contains('+shengfen+')').attr('selected', 'selected');
 	change(1);
-	alert('nihao');
+	alert($('#s1').find(':contains('+shengfen+')')[0].tagName);
 
 	var chengshi = '惠州市';
 	$('#s2').find(':contains('+chengshi+')').attr('selected', 'selected');
