--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
 				'left': bigBoxWidth+10,
 				'bottom': 60+smallBoxWidth+5
 			});
+			$('.sheji-01').css('bottom', 60+bigBoxWidth+5);
+			// $('.sheji-01 span').css('bottom', '6px');
 		});
 	</script>
 </body>
