--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			<div class="cehua-01 bigbox"><a href=""><span>策划运营</span><img src="images/cehua.png" alt="策划"></a></div>
 			<div class="cehua-02 smallbox"><a href=""><span>运营</span></a></div>
 			<div class="cehua-03 smallbox"><a href=""><span>推广</span></a></div>
-			<footer><a href="#">案例 & 合作伙伴<span></span></a></footer>
+			<footer><a href="#">案例 & 合作伙伴<span>></span></a></footer>
 		</section>
 	</div>
 
@@ -74,6 +74,9 @@
 				'left': bigBoxWidth+smallBoxWidth+15,
 				'bottom': 60+bigBoxWidth*2+10
 			});
+		});
+		document.querySelector('body').addEventListener('touchstart', function (ev) {
+			ev.preventDefault();
 		});
 	</script>
 </body>
