--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
 	<!-- css -->
 	<link rel="stylesheet" href="style/normalize.css">
+	<link rel="stylesheet" href="style/base.css">
 	<link rel="stylesheet" href="style/index.css">
 
 
