--- a/tech.html
+++ b/tech.html
@@ -29,6 +29,21 @@
 	<link rel="stylesheet" href="style/tech.css">
 </head>
 <body>
-	待开发
+	<div id="tech">
+		<header><a href="#"><img src="images/header.png" alt="header"></a></header>
+		<section id="sec-01">
+			<img src="images/technology.png" alt="技术">
+			<div><h2>技术</h2><h4>[Technology]</h4></div>
+			<p>web/app/WeChat 我们用代码为您搭建一个新世界。</p>
+		</section>
+		<section id="sec-02" class="display">
+			<div class="bg-shadow"></div>
+			<h3>Web</h3>
+			<p>网页设计，企业网站，商城，OA/CRM企业内部系统开发搭建，上线前测试调整，后期跟踪维护。</p>
+			<div>
+				<div></div>
+			</div>
+		</section>
+	</div>
 </body>
 </html>
