--- a/tech.html
+++ b/tech.html
@@ -45,5 +45,13 @@
 			</div>
 		</section>
 	</div>
+	<script src="scripts/zepto.min.js"></script>
+	<script>
+	$(function() {
+		$('#sec-01').tap(function(){
+			alert('1');
+		})
+	});
+	</script>
 </body>
 </html>
