--- a/tech.html
+++ b/tech.html
@@ -58,6 +58,7 @@
 	<script src="scripts/zepto.min.js"></script>
 	<script src="scripts/swiper-3.3.0.jquery.min.js"></script>
 	<script>
+		alert('1');
 		var mySwiper = new Swiper ('.swiper-container', {
 			loop: true
 		});
@@ -65,6 +66,9 @@
 			var $wrapDiv02 = $('#sec-02 .swiper-bg>div');
 			$wrapDiv02.height($wrapDiv02.width()*0.59);
 			$('#sec-02 .swiper-bg').height($wrapDiv02.width()*0.59+70);
+		});
+		document.querySelector('body').addEventListener('touchstart', function (ev) {
+			ev.preventDefault();
 		});
 	</script>
 </body>
