--- a/tech.html
+++ b/tech.html
@@ -46,7 +46,7 @@
 				<div>
 					<div class="swiper-container" id="swiper-01">
 						<div class="swiper-wrapper">
-							<div class="swiper-slide"><img src="images/sec02-01.jpg"></div>
+							<div class="swiper-slide"><img src="images/tech_sec02_01.jpg"></div>
 							<div class="swiper-slide">Slide 2</div>
 							<div class="swiper-slide">Slide 3</div>
 						</div>
@@ -54,11 +54,30 @@
 				</div>
 			</div>
 		</section>
+		<section id="sec-03" class="display">
+			<h3>App</h3>
+			<p>UI页面设计，App开发测试，企业内部App开发。</p>
+			<div class="swiper-bg">
+				<div>
+					<div class="swiper-container" id="swiper-02">
+						<div class="swiper-wrapper">
+							<div class="swiper-slide">slide 1</div>
+							<div class="swiper-slide">Slide 2</div>
+							<div class="swiper-slide">Slide 3</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+
+
+
+
 	</div>
 	<script src="scripts/zepto.min.js"></script>
 	<script src="scripts/swiper-3.3.0.jquery.min.js"></script>
 	<script>
-		alert('2');
+		// alert('3');
 		var mySwiper = new Swiper ('.swiper-container', {
 			loop: true
 		});
@@ -70,6 +89,6 @@
 		// document.querySelector('body').addEventListener('touchstart', function (ev) {
 		// 	ev.preventDefault();
 		// });
-	</script>
+</script>
 </body>
 </html>
