--- a/tech.html
+++ b/tech.html
@@ -38,8 +38,9 @@
 			<div><h2>技术</h2><h4>[Technology]</h4></div>
 			<p>web/app/WeChat 我们用代码为您搭建一个新世界。</p>
 		</section>
+		<div class="bg-shadow"><img src="images/bg_shadow.png"></div>
 		<section id="sec-02" class="display">
-			<div class="bg-shadow"></div>
+
 			<h3>Web</h3>
 			<p>网页设计，企业网站，商城，OA/CRM企业内部系统开发搭建，上线前测试调整，后期跟踪维护。</p>
 			<div class="swiper-bg">
