--- a/tech.html
+++ b/tech.html
@@ -111,9 +111,9 @@
 			$wrapDiv04.height($wrapDiv04.width()*1.8);
 			$('#sec-04 .swiper-bg').height($wrapDiv04.height()+90);
 		});
-		document.querySelector('body').addEventListener('touchstart', function (ev) {
-			ev.preventDefault();
-		});
+		// document.querySelector('body').addEventListener('touchstart', function (ev) {
+		// 	ev.preventDefault();
+		// });
 </script>
 </body>
 </html>
